fixed chart buttons wrapping

--- a/resources/css/index.less
+++ b/resources/css/index.less
@@ -86,6 +86,7 @@
         .btn-group {
             align-self: flex-end;
             white-space: pre;
+            min-width: 70px;
         }
     }
 }
